# cs421

cs421/: higher-order-solution.hs  i1.hs  i2.hs  i3.hs  i4a.hs  i4b.hs  i6.hs  i7b.hs  lambda-calculus-solution.hs  p1 (1).hs  p1 (2).hs  p1.hs  p2 (1).hs  p2 (2).hs  p2 (3).hs  p2.hs
cs421pdf/: 01-02-intro-1.ppt  01-intro-extras-1.ppt  03-04-ocaml-lists-1.ppt  05-06-HOF-CPSintro-1.ppt  07-CPS-1.ppt  10-userdata-1.ppt  11-monotypederiv-1.ppt  12-polytypederiv-1.ppt  15-review-dfa-regexp-1.ppt  15-unif-regexp-lex-1.ppt  16-regexp-ocamllex-1.ppt  17-ocamllex-bnf-grqmmar-1.ppt  19-lrgrammars-1.ppt  20-parsing-1.ppt  21-rec-dec-parsing-1.ppt  22-nat-sem-1.ppt  23-trans-sem-1.ppt  24-lambda-intro-1.ppt  25-lambda-eval-1.ppt  26-lambda-data-1.ppt  27-HoareLogic-1.ppt
cs421su/activities/interpOne/: README.md  interpOne.cabal
cs421su/activities/interpOne/.stack-work/install/x86_64-osx/lts-6.3/7.10.3/flag-cache/: mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  parsec-3.1.11-33fe1266e8e97076d8f3218fa382d94c  text-1.2.2.1-7d0e2ea4f6c20c86065fc9fde58d97e6
cs421su/activities/interpOne/.stack-work/install/x86_64-osx/lts-6.3/7.10.3/pkgdb/: interpOne-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092.conf  package.cache
cs421su/activities/interpOne/app/: Main.hs
cs421su/activities/interpOne/test/: Spec.hs
cs421su/activities/ll-activity/app/: Main.hs
cs421su/assignments/mp1-haskell/app/: Main.hs
cs421su/grade-reports/: grade-report.txt
cs421su/grade-reports/ml1/: pliu15-report.md
cs421su/grade-reports/quiz-1/: pliu15-report.md
mp2-interpreter副本/app/: Main.hs
mp3-forth副本/: README.md  mp3-forth.cabal
mp3-forth副本/app/: Main.hs
mp4-cps/app/: Main.hs
mp5-scheme/: README.md  mp5-scheme.cabal
mp5-scheme/app/: Main.hs
mp5-scheme/test/: Tests.hs
(+25 files in other folders)
